--- a/redux/redux1/package.json
+++ b/redux/redux1/package.json
@@ -14,7 +14,8 @@
     "@reduxjs/toolkit": "^1.9.5",
     "bulma": "^0.9.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
